  - a different collision handling: update instead of overwrite when pending bits are flushed
  - a more robust pending bit indicator: "255" instead of "2"
  - fixed the detection of how many complete bytes were seen in the context
  - models utilizing ContextMap2 may now indicate whether they want the "extra" features (run statistics, byte history statistics)
  - miscellaneous tweaks
  - the following models switched from ContextMap to ContextMap2: WordModel, MatchModel, CharGroupModel, Image24BitModel, Image8BitModel
    (previous ContextMap2 users: TextModel, ExeModel and NormalModel)
- Enhancements in WordModel
  - added 6 new contexts
  - many small tweaks
- Small modifications in MatchModel:
  - contextmap is changed to ContextMap2 and its memory use is decreased from MEM/4 to MEM/32.
  - the pos mod 256 context (that is beneficial for mozilla) is moved to RecordModel
- Enhancements in NormalModel:
  - the RunContextMap class (used solely by NormalModel) is now gone
  - the single order 1 context is replaced by two: a slow and a fast adapting order 1 context
  - the order 0 context is separated from the hashed contexts: less mixer inputs (1 instead of 7), and collision-free
  - hashed contexts were: 0-6, 8, 14; now: 1-7, 9, 14 (same in number, but generally longer)
- Updated memory usage information displayed on help screen

paq8px_v184: (
2020.01.05
- Split out most classes into individual .hpp files
- Many (minor) code cleanup changes, e.g. initializing variables, removing signed bitwise operations, correcting typos, etc
- Applied consistent code format
- Began switching documentation to Doxygen format

paq8px_v185:
2020.02.09
- Fixed requirement for AVX2. Now compiles regardless of supported vectorization level.
- Fixed compilation on Windows.
- Fixed compression regression with TextParserStateInfo.
- Fixed compression regression caused by a clang-tidy "fix".

paq8px_v186
2020.04.09
- Fixed JpegModel ti add 2 additional inputs to the mixer. 
