@@ -1,9 +1,5 @@
 #include "Ilog.hpp"
 #if defined(__ARM_FEATURE_SIMD32) || defined(__ARM_NEON)
-#define vreinterpretq_m128_f32(x) \
-        (x)
-#define vreinterpretq_f32_m128(x) \
-        (x)
 #include <arm_neon.h>
 #endif
 
@@ -52,7 +48,7 @@ auto VLICost(uint64_t n) -> int {
 
 auto rsqrt(const float x) -> float {
 #if defined(__ARM_FEATURE_SIMD32) || defined(__ARM_NEON)
-  float r = vgetq_lane_f32(vreinterpretq_f32_m128(vreinterpretq_m128_f32(vrsqrteq_f32(vreinterpretq_f32_m128(vdupq_n_f32(x))))),0); //NEON
+  float r = vgetq_lane_f32(vrsqrteq_f32(vdupq_n_f32(x)), 0); //NEON
 #else
   float r = _mm_cvtss_f32(_mm_rsqrt_ss(_mm_set_ss(x))); //SSE
 #endif
