@@ -5,8 +5,6 @@
 #include "cstdint"
 #if defined(__i386__) || defined(__x86_64__)
 #include <xmmintrin.h>
-#elif defined(__ARM_FEATURE_SIMD32) || defined(__ARM_NEON)
-#include <arm_neon.h>
 #endif
 
 /**
